FINALLY GOT THIS SHIT TO BUILD IN ONE GO